gcc/testsuite/rust/rustc/ui/associated-item/impl-duplicate-methods_dg.rs
struct Foo;

impl Foo {
    fn orange(&self) {}
    fn orange(&self) {}
// { dg-error ".E0592." "" { target *-*-* } .-1 }
}

fn main() {}

